MindYourStepDemo3D/local/logs/project.log
2020-05-03 13:31:35-log: ui-kit@1.0.0 enable
2020-05-03 13:31:35-log: ipc@1.0.0 enable
2020-05-03 13:31:35-log: tester@1.0.0 enable
2020-05-03 13:31:35-log: preferences@1.0.0 enable
2020-05-03 13:31:37-log: engine@1.0.0 enable
2020-05-03 13:31:37-log: asset-db@1.0.0 enable
2020-05-03 13:31:37-log: console@1.0.0 enable
2020-05-03 13:31:37-log: scene@1.0.0 enable
2020-05-03 13:31:37-log: packager@1.0.0 enable
2020-05-03 13:31:37-log: project-setting@1.0.0 enable
2020-05-03 13:31:37-log: about@1.0.0 enable
2020-05-03 13:31:37-log: server@1.0.0 enable
2020-05-03 13:31:37-log: utils@1.0.0 enable
2020-05-03 13:31:37-log: profile@1.0.0 enable
2020-05-03 13:31:37-log: assets@1.0.0 enable
2020-05-03 13:31:37-log: inspector@1.0.0 enable
2020-05-03 13:31:37-log: hierarchy@1.0.0 enable
2020-05-03 13:31:37-log: preview@1.0.0 enable
2020-05-03 13:31:37-log: animator@1.0.0 enable
2020-05-03 13:31:38-log: builder@1.0.0 enable
2020-05-03 13:31:38-log: alipay-mini-game@1.0.0 enable
2020-05-03 13:31:38-log: android@1.0.0 enable
2020-05-03 13:31:38-log: baidu-mini-game@1.0.0 enable
2020-05-03 13:31:38-log: cocos-play@1.0.0 enable
2020-05-03 13:31:38-log: huawei-mini-game@1.0.0 enable
2020-05-03 13:31:38-log: ios@1.0.0 enable
2020-05-03 13:31:38-log: mac@1.0.0 enable
2020-05-03 13:31:38-log: native@1.0.0 enable
2020-05-03 13:31:38-log: oppo-mini-game@1.0.0 enable
2020-05-03 13:31:38-log: vivo-mini-game@1.0.0 enable
2020-05-03 13:31:38-log: web-desktop@1.0.0 enable
2020-05-03 13:31:38-log: web-mobile@1.0.0 enable
2020-05-03 13:31:38-log: wechatgame@1.0.0 enable
2020-05-03 13:31:38-log: windows@1.0.0 enable
2020-05-03 13:31:38-log: xiaomi-quick-game@1.0.0 enable
2020-05-03 13:31:42-warn: [Asset DB] Browserslist: caniuse-lite is outdated. Please run next command `npm update`
2020-05-03 13:31:44-error: [Scene] Error: Can not get asset url by uuid "7bb9ab60-c962-4af9-9300-afafd62bd079", the asset may be deleted.
2020-05-03 13:43:51-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 13:46:35-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 13:46:56-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 13:47:34-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 13:47:39-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 14:52:48-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 14:53:47-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 14:53:54-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:08:26-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:16:01-error: [Asset DB] 脚本 D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scripts\gameManager.ts 转换失败：$SyntaxError: D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scripts\gameManager.ts: Unexpected token, expected ";" (80:15)

  78 | 
  79 |         }
> 80 |         init() {
     |                ^
  81 | 
  82 |         }
  83 |         this._curState = value; [uuid: 77bea0c6-0130-459d-bfd0-fd33cf4e6773]
2020-05-03 15:17:18-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:24:00-error: [Asset DB] 脚本 D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scripts\gameManager.ts 转换失败：$SyntaxError: D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scripts\gameManager.ts: Unexpected token, expected "," (88:43)

  86 |         this.generateRoad();
  87 |         this.playerCtrl.setInputActive(false);
> 88 |         this.playerCtrl.node.setPosition(ve;
     |                                            ^
  89 |     }
  90 |     generateRoad() {
  91 |         this.node.removeAllChildren(); [uuid: 77bea0c6-0130-459d-bfd0-fd33cf4e6773]
2020-05-03 15:24:31-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:24:34-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:24:55-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:24:56-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:27-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:27-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:27-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:28-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:28-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:25:29-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:27:41-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:30:51-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:30:52-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:30:53-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:30:54-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:30:55-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
2020-05-03 15:31:22-info: asset(D:\cocos3dProject\cocosDemo\MindYourStepDemo3D\assets\scenes\main.scene) saved
